--- a/public/scss/components/_screen.scss
+++ b/public/scss/components/_screen.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex: auto;
   margin-top: 1.25em;
+  overflow: hidden;
 }
 
 .screen__viewport {
